More improvements to Trigram index
- Test support partitioned for trigram index
- TextIndexProviderFactory don't create its own DESCRIPTOR
- Use .toList() on streams
- Calculate max characters for N code points in TrigramTokenStream instead of magic number
- Refactor TextIndexCapability to abstract class with static factory methods for Text and Trigram implementation